# project-mapper

./: Cargo.toml  README.md  build.rs
media/: default_config.json  default_exclusive_config.json  default_macos_config.json  default_windowed_config.json  example_available_config.json
project-mapper-core/: Cargo.toml
project-mapper-core/src/: lib.rs
project-mapper-core/src/config/: events.rs  mod.rs  options.rs  runtime.rs  sink.rs  source.rs
project-mapper-core/src/loader/: loader.rs
project-mapper-gui/: Cargo.toml
project-mapper-gui/src/: main.rs
project-mapper-gui/src/config/: consts.rs  env.rs  mod.rs  parser.rs
project-mapper-gui/src/core/: app.rs  core.rs  elements.rs  header.rs  mod.rs  simple_ui.rs
project-mapper-gui/src/runtime_api/: config.rs  mod.rs  runtime.rs
project-mapper-gui/src/wigets/: elements.rs  mod.rs  region.rs  sink.rs  source.rs
project-mapper-runtime/: Cargo.toml
project-mapper-runtime/src/: main.rs
project-mapper-runtime/src/api/: cli.rs  mod.rs
project-mapper-runtime/src/pipeline/: pipeline.rs  source_constructor.rs
project-mapper-runtime/src/render/: opengl.rs
project-mapper-runtime/src/runtime/: mod.rs  options.rs  runtime.rs
project-mapper-runtime/src/utils/: backup_main.rs
project-mapper-runtime/src/window/: config.rs  handler.rs  mod.rs  utils.rs
src/: main.rs  opengl.rs
src/config/: config.rs  events.rs  mod.rs  runtime.rs  sink.rs  source.rs
src/gl/: opengl.rs
src/pipeline/: pipeline.rs
src/render/: opengl.rs
src/runtime/: runtime.rs
src/window/: handler.rs
