[workspace]
resolver = "2"

default-members = [
  "project-mapper-runtime",
  "project-mapper-core",
]

members = [
  "project-mapper-runtime",
  "project-mapper-core",
]

[workspace.package]
version = "0.1.0"
categories = ["multimedia"]
edition = "2024"
rust-version = "1.87"

[workspace.dependencies]
project-mapper-runtime = { path = "project-mapper-runtime" }
project-mapper-core = { path = "project-mapper-core" }