[workspace]
resolver = "2"

default-members = [
  "project-mapper-runtime",
  "project-mapper-gui",
  "project-mapper-core",
]

members = [
  "project-mapper-runtime",
  "project-mapper-core", "project-mapper-gui",
]

[workspace.package]
version = "0.1.0"
categories = ["multimedia"]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
project-mapper-runtime = { path = "project-mapper-runtime" }
project-mapper-core = { path = "project-mapper-core" }
project-mapper-gui = { path = "project-mapper-gui" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
