[package]
name = "project-mapper-core"
version.workspace = true
categories.workspace = true
edition.workspace = true 
rust-version.workspace = true 

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
winit = { version = "0.30" , default-features = false}