[package]
name = "project-mapper-gui"
version.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
tempdir = "0.3"
eframe = "0.31" 
json ="0.12"

project-mapper-core = { workspace = true}


[[bin]]
name = "project-mapper-gui"
path = "./src/main.rs"
