[package]
name = "project-mapper-gui"
version.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
tempdir = "0.3"
eframe = { git = "https://github.com/emilk/egui.git", rev = "884be3491d01a1c1963c4dd63d8d788e1245ce37" }
egui = { git = "https://github.com/emilk/egui.git", rev = "884be3491d01a1c1963c4dd63d8d788e1245ce37" }
egui_kittest = { git = "https://github.com/emilk/egui.git", rev = "884be3491d01a1c1963c4dd63d8d788e1245ce37" }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "884be3491d01a1c1963c4dd63d8d788e1245ce37" }
json ="0.12"
strum_macros = "0.27"
rand = "0.9"
egui_material_icons = {git ="https://github.com/HonakerM/hello_egui.git", rev = "5d0548352dc5880d5bdb23cdbfcfbdc778b36284"}
strum = "0.27"
rfd = "0.15.3"


project-mapper-core = { workspace = true}


[patch.crates-io]
"egui" = { git = "https://github.com/emilk/egui.git", rev = "884be3491d01a1c1963c4dd63d8d788e1245ce37" }
"eframe" = { git = "https://github.com/emilk/egui.git", rev = "884be3491d01a1c1963c4dd63d8d788e1245ce37" }

[[bin]]
name = "project-mapper-gui"
path = "./src/main.rs"
